--- a/src/html/12_course_同步课程.html
+++ b/src/html/12_course_同步课程.html
@@ -2588,14 +2588,212 @@
             </tr>
           </table>
         </div>
-        <div class="change_course_details-list ">
-          <table class="change_course_details_table active">
-            <tr>
-              <th>课程名称</th>
-              <th>上次学习日期</th>
-              <th>继续学习</th>
-            </tr>
-          </table>
+        <div class="change_course_details-list " style="padding: 10px 30px;">
+          <div class="xc-new-table">
+            <div class="xc-table-head">
+              <ul>
+                <li class="col-xs-4">课程阶段</li>
+                <li class="col-xs-4">课程版本</li>
+                <li class="col-xs-4">课本</li>
+              </ul>
+            </div>
+            <div class="xc-table-body">
+              <ul class="jq-xc-table grammar">
+                <li class="one active">启蒙课程
+                  <ul class="two">
+                    <li class="active">一教材
+                      <ul class="three big">
+                        <li class="active">小学Unit 1-1 Part1
+                        </li>
+                        <li>小学Unit 1-2 Part1
+                        </li>
+                        <li>小学Unit 1-2 Part1
+
+                        </li>
+                        <li>小学Unit 1-2 Part1
+
+                        </li>
+                        <li>小学Unit 1-2 Part1
+
+                        </li>
+                        <li>小学Unit 1-2 Part1
+
+                        </li>
+                        <li>小学Unit 1-2 Part1
+
+                        </li>
+                        <li>小学Unit 1-2 Part1
+
+                        </li>
+                      </ul>
+                    </li>
+                    <li>一教材
+                      <ul class="three big">
+                        <li class="active">小学Unit 2-1 Part1
+
+                        </li>
+                        <li>小学Unit 2-2 Part1
+
+                        </li>
+                      </ul>
+                    </li>
+                    <li class="">一教材
+                      <ul class="three big">
+                        <li class="active">小学Unit 3-1 Part1
+
+                        </li>
+                        <li>小学Unit 3-2 Part1
+
+                        </li>
+                      </ul>
+                    </li>
+                    <li class="">一教材
+                      <ul class="three big">
+                        <li class="active">小学Unit 4-1 Part1
+
+                        </li>
+                        <li>小学Unit 4-2 Part1
+
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                </li>
+                <li class="one">小学课程
+                  <ul class="two">
+                    <li class="active">二教材
+                      <ul class="three big">
+                        <li class="active">初中Unit 1-1 Part1
+
+                        </li>
+                        <li>初中Unit 1-2 Part1
+
+                        </li>
+                      </ul>
+                    </li>
+                    <li>二教材
+                      <ul class="three big">
+                        <li class="active">初中Unit 2-1 Part1
+
+                        </li>
+                        <li>初中Unit 2-2 Part1
+
+                        </li>
+                      </ul>
+                    </li>
+                    <li>二教材
+                      <ul class="three big">
+                        <li class="active">初中Unit 3-1 Part1
+
+                        </li>
+                        <li>初中Unit 3-2 Part1
+
+                        </li>
+                      </ul>
+                    </li>
+                    <li>二教材
+                      <ul class="three big">
+                        <li class="active">初中Unit 4-1 Part1
+
+                        </li>
+                        <li>初中Unit 4-2 Part1
+
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                </li>
+                <li class="one">初中课程
+                  <ul class="two">
+                    <li class="active">三教材
+                      <ul class="three big">
+                        <li class="active">高中Unit 1-1 Part1
+
+                        </li>
+                        <li>高中Unit 1-2 Part1
+
+                        </li>
+                      </ul>
+                    </li>
+                    <li>三教材
+                      <ul class="three big">
+                        <li class="active">高中Unit 2-1 Part1
+
+                        </li>
+                        <li>高中Unit 2-2 Part1
+
+                        </li>
+                      </ul>
+                    </li>
+                    <li>三教材
+                      <ul class="three big">
+                        <li class="active">高中Unit 3-1 Part1
+
+                        </li>
+                        <li>高中Unit 3-2 Part1
+
+                        </li>
+                      </ul>
+                    </li>
+                    <li>三教材
+                      <ul class="three big">
+                        <li class="active">高中Unit 4-1 Part1
+
+                        </li>
+                        <li>高中Unit 4-2 Part1
+
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                </li>
+                <li class="one">高中课程
+                    <ul class="two">
+                      <li class="active">三教材
+                        <ul class="three big">
+                          <li class="active">高中Unit 1-1 Part1
+  
+                          </li>
+                          <li>高中Unit 1-2 Part1
+  
+                          </li>
+                        </ul>
+                      </li>
+                      <li>三教材
+                        <ul class="three big">
+                          <li class="active">高中Unit 2-1 Part1
+  
+                          </li>
+                          <li>高中Unit 2-2 Part1
+  
+                          </li>
+                        </ul>
+                      </li>
+                      <li>三教材
+                        <ul class="three big">
+                          <li class="active">高中Unit 3-1 Part1
+  
+                          </li>
+                          <li>高中Unit 3-2 Part1
+  
+                          </li>
+                        </ul>
+                      </li>
+                      <li>三教材
+                        <ul class="three big">
+                          <li class="active">高中Unit 4-1 Part1
+  
+                          </li>
+                          <li>高中Unit 4-2 Part1
+  
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
