--- a/src/html/29_finish_grammar_搞定语法.html
+++ b/src/html/29_finish_grammar_搞定语法.html
@@ -2,74 +2,74 @@
 <html>
 
 <head>
-    <meta content="webkit" name="renderer" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta charset="UTF-8">
-    <!-- 第0步： 
+  <meta content="webkit" name="renderer" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="UTF-8">
+  <!-- 第0步： 
     每个页面的Title改下 -->
-    <title>搞定语法</title>
-    <meta name="Keywords" content="">
-    <meta name="Description" content="">
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
-    <meta content="no-cache,must-revalidate" http-equiv="Cache-Control">
-    <meta content="no-cache" http-equiv="pragma">
-    <meta content="0" http-equiv="expires">
-    <meta content="telephone=no, address=no" name="format-detection">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <title>搞定语法</title>
+  <meta name="Keywords" content="">
+  <meta name="Description" content="">
+  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+  <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+  <meta content="no-cache,must-revalidate" http-equiv="Cache-Control">
+  <meta content="no-cache" http-equiv="pragma">
+  <meta content="0" http-equiv="expires">
+  <meta content="telephone=no, address=no" name="format-detection">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <link rel="stylesheet" href="../css/main_linye.css">
-    <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/main_linye.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="linye-finish">
-    <!--[if lte IE 9]>
+  <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-   <!-- build:head -->
-   <header class="comm-header">
-  <div class="midd_header clearfix">
-    <div class="index_icon">
-      <a href="index.html"></a>
-    </div>
-    <ul class="nav clearfix">
-      <li class="active">
-        <a href="#">课程中心</a>
-      </li>
-      <li>
-        <a href="#">我的班级</a>
-      </li>
-      <li>
-        <a href="#">排行榜</a>
-      </li>
-      <li>
-        <a href="#">学币商城</a>
-      </li>
-    </ul>
-    <div class="login">
-      <a href="#">个人中心</a>
-      <ul class="head-list">
-        <li>
-          <a class="info" href='javascript:;'>个人资料</a>
+  <!-- build:head -->
+  <header class="comm-header">
+    <div class="midd_header clearfix">
+      <div class="index_icon">
+        <a href="index.html"></a>
+      </div>
+      <ul class="nav clearfix">
+        <li class="active">
+          <a href="#">课程中心</a>
         </li>
         <li>
-          <a class="honor" href='javascript:;'>荣誉中心</a>
+          <a href="#">我的班级</a>
         </li>
         <li>
-          <a class='test'href='javascript:;'>测试记录</a>
+          <a href="#">排行榜</a>
         </li>
         <li>
-          <a class="task" href='javascript:;'>我的任务</a>
-        </li>
-        <li>
-          <a class="logout" href='javascript:;'>退出登录</a>
+          <a href="#">学币商城</a>
         </li>
       </ul>
+      <div class="login">
+        <a href="#">个人中心</a>
+        <ul class="head-list">
+          <li>
+            <a class="info" href='javascript:;'>个人资料</a>
+          </li>
+          <li>
+            <a class="honor" href='javascript:;'>荣誉中心</a>
+          </li>
+          <li>
+            <a class='test' href='javascript:;'>测试记录</a>
+          </li>
+          <li>
+            <a class="task" href='javascript:;'>我的任务</a>
+          </li>
+          <li>
+            <a class="logout" href='javascript:;'>退出登录</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</header>
-   <!-- endbuild -->
+  </header>
+  <!-- endbuild -->
 
 
 
@@ -77,80 +77,277 @@
 
 
 
-    <div class="wrap">
-        <div class="main">
-            <div class="linye-body">
-                <p class="data-title">
-                    个人中心／
-                    <span>搞定语法</span>
-                </p>
-                <div class="head">
-                    <p class="book-name">牛津上海版-二年级上册</p>
-                    <img class="reflash-icon" src="../img/029/combinedshape2x.png" alt="">
-                    <p class="reflesh-title">更换课程</p>
-                    <a class="back">返回课程中心</a>
-                </div>
-
-                <section class="content">
-                  <div class="certificate-head">
-                    <div class="table-hd1">选择单元</div>
-                    <div class="table-hd2">Unit 2 反身代词</div>
-                </div>
-                <div class="content-body">
-                  <ul class="class-type">
-                  <li class="class-type-item29 singular">
-                    <div class="class-type1">unit1 <span>代词定义、人称…</span></div>
-                    <div class="circle1"></div>
-                    <div class="circle2"></div>
-                  </li>
-                    <li class="class-type-item29 even ">
-                        <div class="class-type1">unit1 <span>代词定义、人称…</span></div>
-                        <div class="circle1 circle1-running"></div>
-                        <div class="circle2 circle2-running"></div>
-                    </li>
-                    <li class="class-type-item29 singular">
-                        <div class="class-type1">unit1 <span>代词定义、人称…</span></div>
-                        <div class="circle1 circle1-none"></div>
-                        <div class="circle2 circle2-none"></div>
-                    </li>
-                    <li class="class-type-item29 even"></li>
-                    <li class="class-type-item29 singular"></li>
-                    <li class="class-type-item29 even"></li>
-                    <li class="class-type-item29 singular"></li>
-                    <li class="class-type-item29 even"></li>
-                    <li class="class-type-item29 singular"></li>
-                    <li class="class-type-item29 even"></li>
-                    <li class="class-type-item29 singular"></li>
-                    <li class="class-type-item29 even"></li>
-                    </ul>
-                    <div class="content-right">
-                      <div class="reword-list">
-                        <div class="reword-litem">
-                          <img class="reword-icon" src="../img/029/group32x.png" alt="">
-                          <p class="reword-tip1">互动学习</p>
-                          <p class="reword-tip2">已完成<span>2</span>次</p>
-                          <button class="reword-tip3">继续学习</button>
-                        </div>
-                        <div class="reword-litem">
-                          <img class="reword-icon" src="../img/029/group62x.png" alt="">
-                          <p class="reword-tip1">学后智测</p>
-                          <p class="reword-tip2">最高分时<span>90</span></p>
-                          <button class="reword-tip3">立即闯关</button>
-                        </div>
-                      </div>
-
-                    <img class="content-right-img1" src="../img/029/group2x.png" alt="">
-                    </div>
-                </div>
-                </section>
-
-            </div>
+  <div class="wrap">
+    <div class="main">
+      <div class="linye-body">
+        <p class="data-title">
+          个人中心／
+          <span>搞定语法</span>
+        </p>
+        <div class="head">
+          <p class="book-name">牛津上海版-二年级上册</p>
+          <img class="reflash-icon course-head-classes" src="../img/029/combinedshape2x.png" alt="">
+          <p class="reflesh-title course-head-classes">更换课程</p>
+          <a class="back">返回课程中心</a>
         </div>
 
+        <section class="content">
+          <div class="certificate-head">
+            <div class="table-hd1">选择单元</div>
+            <div class="table-hd2">Unit 2 反身代词</div>
+          </div>
+          <div class="content-body">
+            <ul class="class-type">
+              <li class="class-type-item29 singular">
+                <div class="class-type1">unit1 <span>代词定义、人称…</span></div>
+                <div class="circle1"></div>
+                <div class="circle2"></div>
+              </li>
+              <li class="class-type-item29 even ">
+                <div class="class-type1">unit1 <span>代词定义、人称…</span></div>
+                <div class="circle1 circle1-running"></div>
+                <div class="circle2 circle2-running"></div>
+              </li>
+              <li class="class-type-item29 singular">
+                <div class="class-type1">unit1 <span>代词定义、人称…</span></div>
+                <div class="circle1 circle1-none"></div>
+                <div class="circle2 circle2-none"></div>
+              </li>
+              <li class="class-type-item29 even"></li>
+              <li class="class-type-item29 singular"></li>
+              <li class="class-type-item29 even"></li>
+              <li class="class-type-item29 singular"></li>
+              <li class="class-type-item29 even"></li>
+              <li class="class-type-item29 singular"></li>
+              <li class="class-type-item29 even"></li>
+              <li class="class-type-item29 singular"></li>
+              <li class="class-type-item29 even"></li>
+            </ul>
+            <div class="content-right">
+              <div class="reword-list">
+                <div class="reword-litem">
+                  <img class="reword-icon" src="../img/029/group32x.png" alt="">
+                  <p class="reword-tip1">互动学习</p>
+                  <p class="reword-tip2">已完成<span>2</span>次</p>
+                  <button class="reword-tip3">继续学习</button>
+                </div>
+                <div class="reword-litem">
+                  <img class="reword-icon" src="../img/029/group62x.png" alt="">
+                  <p class="reword-tip1">学后智测</p>
+                  <p class="reword-tip2">最高分时<span>90</span></p>
+                  <button class="reword-tip3">立即闯关</button>
+                </div>
+              </div>
+
+              <img class="content-right-img1" src="../img/029/group2x.png" alt="">
+            </div>
+          </div>
+        </section>
+
+      </div>
     </div>
+
+  </div>
+  <!--course center-->
+  <div class="course_center_wrap xc_center_wrap">
+    <div class="course_center xc_center">
+      <div class="change_course_nav clearfix">
+        <a class="change_course_nav_list active">我的课程</a>
+        <a class="change_course_nav_list">全部课程</a>
+        <span class="close"></span>
+      </div>
+      <div class="change_course_details">
+        <div class="change_course_details-list active">
+          <table class="change_course_details_table active" style="padding: 10px 28px 0px">
+            <tr>
+              <th>课程名称</th>
+              <th>上次学习日期</th>
+              <th>继续学习</th>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>学习</span>
+                </p>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <div class="change_course_details-list " style="padding: 10px 28px 0px">
+          <table class="change_course_details_table xc-details_table xc-33">
+            <tr>
+              <th>课程阶段</th>
+            </tr>
+            <tr class="xc-table-list active">
+              <td>小学英语</td>
+            </tr>
+            <tr class="xc-table-list">
+              <td>初中英语</td>
+            </tr>
+            <tr class="xc-table-list">
+              <td>高中英语</td>
+            </tr>
+          </table>
+          <table class="change_course_details_table xc-details_table xc-66 active">
+            <tr>
+              <th>选择课程</th>
+            </tr>
+            <tr>
+              <td>教材版本1</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+          </table>
+          <table class="change_course_details_table xc-details_table xc-66 ">
+            <tr>
+              <th>选择课程</th>
+            </tr>
+            <tr>
+              <td>教材版本2</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+          </table>
+          <table class="change_course_details_table xc-details_table xc-66 ">
+            <tr>
+              <th>选择课程</th>
+            </tr>
+            <tr>
+              <td>教材版本3</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+            <tr>
+              <td>教材版本</td>
+            </tr>
+          </table>
+        </div>
+
+      </div>
     </div>
-	<!-- build:foot -->
-	<!-- 底部 -->
+  </div>
+  </div>
+  <!-- build:foot -->
+  <!-- 底部 -->
   <div class="footer">
     <div class="footer-ct">
       <div class="tel-wp">
@@ -164,17 +361,18 @@
       <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
     </div>
   </div>
-	<!-- endbuild -->
+  <!-- endbuild -->
 
 
 
 
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../js/main_linye.js"></script>
-    <script>
-       
-       
-    </script>
+  <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+  <script src="../js/main_linye.js"></script>
+  <script src="../js/main_xc.js"></script>
+  <script>
+
+
+  </script>
 </body>
 
 </html>
