--- a/src/html/teachermanagement_list.html
+++ b/src/html/teachermanagement_list.html
@@ -580,7 +580,53 @@
 
 
   </div>
-
+  <style>
+    fieldset{
+      display: none !important;
+    }
+  </style>
+<script>
+  function change () {
+    return `<form method="post" class="form-horizontal" action="#" data-parsley-validate="" novalidate="">
+    <div class="panel panel-dark panel-flat">
+       <div class="panel-body">
+          <div class="form-group">
+             <label class="control-label col-sm-5">教师姓名：</label>
+             <div class="col-sm-6">
+              <input type="text" name="name" placeholder="请输入" required class="form-control">
+            </div>
+          </div>
+          <div class="form-group">
+             <label class="control-label col-sm-5">教师手机：</label>
+             <div class="col-sm-6">
+              <input type="text" name="name" placeholder="请输入" required class="form-control">
+            </div>
+          </div>
+          <div class="form-group">
+             <label class="control-label col-sm-5">选择学校：</label>
+             <div class="col-sm-6">
+              <select name="school" id="school" class="form-control">
+                <option>请选择学校</option>
+                <option>1</option>
+                <option>2</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-5">账号状态：</label>
+            <div class="col-sm-6 text-lt">
+              <label class="switch switch-lg">
+                <input type="checkbox" checked="checked">
+                <span></span>
+              </label>
+            </div>
+            
+          </div>
+       </div>
+    </div>
+  </form>`
+  }
+</script>
   <!-- build:js -->
   <!-- =============== JS ===============-->
   <script src="../js/vendor/modernizr/modernizr.custom.js"></script>
