--- a/src/html/49_clearance_字母大通关_01.html
+++ b/src/html/49_clearance_字母大通关_01.html
@@ -171,30 +171,30 @@
               </div>
             </div>
             <div class="xc-coustom-pent">
-                <div class="coustom-pent-head">
-                  <span class="num">1.</span>A
-                </div>
-                <div class="coustom-pent-body">
-                  <div class="coustom-label can radio">
-                    <div>
-                      <label class="label active">
-                        <input class="radio-input" type="radio" value="1" name="coustom3" checked />a</label>
-                    </div>
-                    <div>
-                      <label class="label">
-                        <input class="radio-input" type="radio" value="2" name="coustom3" />b</label>
-                    </div>
-                    <div>
-                      <label class="label">
-                        <input class="radio-input" type="radio" value="3" name="coustom3" />c</label>
-                    </div>
-                    <div>
-                      <label class="label">
-                        <input class="radio-input" type="radio" value="4" name="coustom3" />d</label>
-                    </div>
+              <div class="coustom-pent-head">
+                <span class="num">1.</span>A
+              </div>
+              <div class="coustom-pent-body">
+                <div class="coustom-label can radio">
+                  <div>
+                    <label class="label active">
+                      <input class="radio-input" type="radio" value="1" name="coustom3" checked />a</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="2" name="coustom3" />b</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="3" name="coustom3" />c</label>
+                  </div>
+                  <div>
+                    <label class="label">
+                      <input class="radio-input" type="radio" value="4" name="coustom3" />d</label>
                   </div>
                 </div>
               </div>
+            </div>
           </div>
         </div>
         <div class="xc-pent">
@@ -206,7 +206,8 @@
             <div class="xc-coustom-pent">
               <div class="coustom-pent-head">
                 <span class="num">1.</span>
-                <audio class="audioType1"><source src="../music/3.mp3" type="audio/mp3"></audio>
+                <audio class="audioType1">
+                  <source src="../music/3.mp3" type="audio/mp3"></audio>
                 <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
               </div>
               <div class="coustom-pent-body">
@@ -218,7 +219,8 @@
             <div class="xc-coustom-pent">
               <div class="coustom-pent-head">
                 <span class="num">1.</span>
-                <audio class="audioType1"><source src="../music/3.mp3" type="audio/mp3"></audio>
+                <audio class="audioType1">
+                  <source src="../music/3.mp3" type="audio/mp3"></audio>
                 <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
               </div>
               <div class="coustom-pent-body">
@@ -230,7 +232,47 @@
             <div class="xc-coustom-pent">
               <div class="coustom-pent-head">
                 <span class="num">1.</span>
-                <audio class="audioType1"><source src="../music/3.mp3" type="audio/mp3"></audio>
+                <audio class="audioType1">
+                  <source src="../music/3.mp3" type="audio/mp3"></audio>
+                <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
+              </div>
+              <div class="coustom-pent-body">
+                <div class="coustom-label can radio">
+                  <input type="text" class="write-input" placeholder="请拼写单词">
+                </div>
+              </div>
+            </div>
+            <div class="xc-coustom-pent">
+              <div class="coustom-pent-head">
+                <span class="num">1.</span>
+                <audio class="audioType1">
+                  <source src="../music/3.mp3" type="audio/mp3"></audio>
+                <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
+              </div>
+              <div class="coustom-pent-body">
+                <div class="coustom-label can radio">
+                  <input type="text" class="write-input" placeholder="请拼写单词">
+                </div>
+              </div>
+            </div>
+            <div class="xc-coustom-pent">
+              <div class="coustom-pent-head">
+                <span class="num">1.</span>
+                <audio class="audioType1">
+                  <source src="../music/3.mp3" type="audio/mp3"></audio>
+                <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
+              </div>
+              <div class="coustom-pent-body">
+                <div class="coustom-label can radio">
+                  <input type="text" class="write-input" placeholder="请拼写单词">
+                </div>
+              </div>
+            </div>
+            <div class="xc-coustom-pent">
+              <div class="coustom-pent-head">
+                <span class="num">1.</span>
+                <audio class="audioType1">
+                  <source src="../music/3.mp3" type="audio/mp3"></audio>
                 <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
               </div>
               <div class="coustom-pent-body">
@@ -259,12 +301,12 @@
   </div>
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_xc.js"></script>
-    <script>
-    $(function() {
-      comment.endTime($('#xc-time'), 88, function() {
+  <script>
+    $(function () {
+      comment.endTime($('#xc-time'), 88, function () {
         console.log('倒计时结束')
       })
-      comment.endTime($('.instr-itme'), 88, function() {
+      comment.endTime($('.instr-itme'), 88, function () {
         console.log('倒计时结束了！')
       })
     })
