--- a/src/html/studentmanagement_recharge_president.html
+++ b/src/html/studentmanagement_recharge_president.html
@@ -19,9 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
-
-
-
+  <link rel="stylesheet" href="../css/wj_teacher.css">
 
 
 
@@ -39,7 +37,7 @@
 
 </head>
 
-<body>
+<body class="recharge-body">
   <div class="wrapper">
     <!-- build:head -->
     <header class="topnavbar-wrapper">
