--- a/src/html/studentmanagement_allocated_admin.html
+++ b/src/html/studentmanagement_allocated_admin.html
@@ -719,7 +719,10 @@
                   <div class="form-group">
                     <label class="control-label col-sm-2">性别：</label>
                     <div class="col-sm-6">
-                      <input id="id-password" placeholder="男" type="text" name="sex" required class="form-control">
+                      <select name="" id="label" class="form-control">
+                        <option value="">男</option>
+                        <option value="1">女</option>
+                      </select>
                     </div>
                   </div>
                   <div class="form-group">
