--- a/src/html/01_login.html
+++ b/src/html/01_login.html
@@ -40,7 +40,7 @@
             <form class="login-form" action="">
               <p class="form-title">欢迎</p>
               <input class="login-ipt mobile-ipt" type="text" placeholder="请输入手机号">
-              <input class="login-ipt pwd" type="text" placeholder="请输入密码">
+              <input class="login-ipt pwd" type="password" placeholder="请输入密码">
               <p class="errcue none"><span class="err-icon">!</span><span class="err-txt"></span></p>
               <a href="javascript:;" class="login-btn" id="loginbtn">登录</a>
               <div class="clearfix">
