--- a/src/html/coursemanagement_class.html
+++ b/src/html/coursemanagement_class.html
@@ -38,6 +38,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/wj_teacher.css">
 
 
@@ -84,6 +85,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -407,6 +409,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper coursemanagement-wp">
@@ -527,6 +530,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -541,9 +545,10 @@
   <script src="../js/vendor/sweetalert/dist/sweetalert.min.js"></script>
   <script src="../js/vendor/moment/min/moment-with-locales.min.js"></script>
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
-  <!-- <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/locales/bootstrap-datetimepicker.zh-CN.js"></script> -->
+  <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
