--- a/src/html/coursemanagement_task.html
+++ b/src/html/coursemanagement_task.html
@@ -37,6 +37,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/wj_teacher.css">
 
 
@@ -83,6 +84,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -404,11 +406,12 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          学习任务
+          完成课程的学生列表
           <div class='mt10 xc-clearfix'>
               <a href="javascript:history.go(-1)" class="btn btn-primary pull-left">返回</a>
           </div>
@@ -461,7 +464,7 @@
                               <th>智学单词（单元）</th>
                               <th>智学句子（单元）</th>
                               <th>同步课程（单元）</th>
-                              <th>只能闯关（单元）</th>
+                              <th>智能闯关（单元）</th>
                               <th>操作</th>
                             </tr>
                           </thead>
@@ -475,7 +478,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_taskadd.html">修改</a>
                                 <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -488,7 +491,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_taskadd.html">修改</a>
                                 <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -501,7 +504,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_taskadd.html">修改</a>
                                 <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -532,7 +535,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_taskadd.html">修改</a>
                                 <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -543,7 +546,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_taskadd.html">修改</a>
                                 <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -554,7 +557,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_taskadd.html">修改</a>
                                 <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -589,7 +592,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_taskadd.html">修改</a>
                                 <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -602,7 +605,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_taskadd.html">修改</a>
                                 <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -615,7 +618,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_taskadd.html">修改</a>
                                 <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -652,6 +655,7 @@
                   </div>
                 </div>  
                      <!-- endbuild -->
+
 
 
 
@@ -709,6 +713,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -726,6 +731,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
