--- a/src/html/coursemanagement_task_student.html
+++ b/src/html/coursemanagement_task_student.html
@@ -36,6 +36,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/wj_teacher.css">
 
 
@@ -82,6 +83,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -401,6 +403,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -484,7 +487,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_task_studentadd.html">修改</a>
                                 <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -498,7 +501,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_task_studentadd.html">修改</a>
                                 <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -512,7 +515,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_task_studentadd.html">修改</a>
                                 <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -526,7 +529,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_task_studentadd.html">修改</a>
                                 <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -559,7 +562,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_task_studentadd.html">修改</a>
                                 <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -571,7 +574,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_task_studentadd.html">修改</a>
                                 <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -583,7 +586,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_task_studentadd.html">修改</a>
                                 <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -620,7 +623,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_task_studentadd.html">修改</a>
                                 <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -634,7 +637,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_task_studentadd.html">修改</a>
                                 <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -648,7 +651,7 @@
                               <td>5</td>
                               <td>10</td>
                               <td>
-                                <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
+                                <a class="btn btn-primary jq-createclass" href="./coursemanagement_task_studentadd.html">修改</a>
                                 <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
@@ -685,6 +688,7 @@
                   </div>
                 </div>  
                      <!-- endbuild -->
+
 
 
 
@@ -740,6 +744,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -757,6 +762,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
