--- a/src/html/studentmanagement_unallocated_admin.html
+++ b/src/html/studentmanagement_unallocated_admin.html
@@ -483,7 +483,10 @@
                         </td>
                         <td class="text-warning">18000000000</td>
                         <td>名字名字</td>
-                        <td>昵称昵称</td>
+                        <td>昵称昵称
+                          weewrwerw
+                          weewrwerwwerewrewrewrew
+                        </td>
                         <td>学校</td>
                         <td>教师</td>
                         <td>班级</td>
