--- a/src/html/schoolmanagement_setting.html
+++ b/src/html/schoolmanagement_setting.html
@@ -408,7 +408,7 @@
 
     <!-- 主要内容 -->
     <section>
-      <div class="content-wrapper">
+      <div class="content-wrapper scseting">
         <div class="content-heading">
           扣费设置
           <div class='mt10 xc-clearfix'>
