--- a/src/html/coursemanagement_class.html
+++ b/src/html/coursemanagement_class.html
@@ -39,6 +39,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/wj_teacher.css">
 
 
@@ -85,6 +86,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -410,6 +412,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper coursemanagement-wp">
@@ -437,7 +440,7 @@
                 <div class="col-sm-3">班级名称</div>
                 <div class="col-sm-2">6</div>
                 <div class="col-sm-3">6</div>
-                <div class="col-sm-2">6 <a href="./coursemanagement_task.html">查看</a></div>
+                <div class="col-sm-2">6 <a href="./coursemanagement_student.html">查看</a></div>
                 <a type="button" href="./coursemanagement_classadd.html" class="pull-right btn btn-primary jq-addcourse" type="button">新增课程</a>
               </div>
             </div>
@@ -456,7 +459,7 @@
                 <div class="col-sm-3">班级名称</div>
                 <div class="col-sm-2">6</div>
                 <div class="col-sm-3">6</div>
-                <div class="col-sm-2">6 <a href="./coursemanagement_task.html">查看</a></div>
+                <div class="col-sm-2">6 <a href="./coursemanagement_student.html">查看</a></div>
                 <a type="button" href="./coursemanagement_classadd.html" class="pull-right btn btn-primary jq-addcourse" type="button">新增课程</a>
               </div>
             </div>
@@ -531,6 +534,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -548,6 +552,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
