--- a/src/html/coursemanagement_student.html
+++ b/src/html/coursemanagement_student.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>学生管理-学生列表</title>
+  <title>完成课程的学生列表</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -39,13 +39,16 @@
 
 
 
-  <link rel="stylesheet" href="../css/wj_teacher.css">
-  
 
 
+
+
+
+
+  <link rel="stylesheet" href="../css/main_xc.css">
 </head>
 
-<body class="body-studentmanagementlist">
+<body>
   <div class="wrapper">
     <!-- build:head -->
     <header class="topnavbar-wrapper">
@@ -85,6 +88,11 @@
       </nav>
     </header>
     <!-- endbuild -->
+
+
+
+
+
 
 
 
@@ -408,12 +416,16 @@
 
 
 
+
+
+
+
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          学生列表
-          <span class="text-sm hidden-xs">所在学校编号：A00001 学生注册时请指导学生在完善信息页填写学校编码，填写编码的学生将直接分配给校区，不填写将无法直接操作该学生</span>
+          完成课程的学生列表
           <div class='mt10 xc-clearfix'>
               <a href="javascript:history.go(-1)" class="btn btn-primary pull-left">返回</a>
           </div>
@@ -422,45 +434,12 @@
           <div class="col-xs-12">
             <!-- START panel-->
             <div class="panel-default">
-              <div class="panel-heading">
-                <form class="text-right form-lineH">
-                  <div class="row">
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">选择班级：</label>
-                      <div class="col-sm-8">
-                        <select name="" id="" class="form-control">
-                          <option value="">全部</option>
-                          <option value="1">未分班</option>
-                          <option value="2">过期学员</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">学生手机：</label>
-                      <div class="col-sm-8">
-                        <input type="tel" name="" class="form-control">
-                      </div>
-                    </div>
-                    <div class="col-sm-1">
-                      <button type="button" class="btn btn-primary">搜索</button>
-                    </div>
-                  </div>
-                </form>
-              </div>
               <!-- START table-responsive-->
               <div class="panel-heading">
                 <div class="table-responsive">
                   <table id="table-ext-1" class="table table-bordered table-hover dataTable">
                     <thead>
                       <tr>
-                        <th data-check-all>
-                          <div data-toggle="tooltip" data-title="全选" class="checkbox c-checkbox">
-                            <label>
-                              <input class="jq-allcheck" type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
-                        </th>
                         <th>学生手机</th>
                         <th>姓名</th>
                         <th>昵称</th>
@@ -470,43 +449,21 @@
                         <th>到期日期</th>
                         <th>当前学币</th>
                         <th>年级</th>
-                        <th>操作</th>
                       </tr>
                     </thead>
                     <tbody id="designerlist">
                       <tr>
-                        <td>
-                          <div class="checkbox c-checkbox">
-                            <label>
-                              <input type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
-                        </td>
                         <td class="text-warning">18000000000</td>
                         <td>名字名字</td>
                         <td>昵称昵称</td>
-                        <td>小学</td>
+                        <td>初中</td>
                         <td class="text-danger">5天</td>
                         <td>2015-01-21</td>
                         <td>2015-01-21</td>
                         <td>500</td>
                         <td>七年级</td>
-                        <td>
-                          <a class="btn btn-primary jq-edit" href="javascript:;">修改资料</a>
-                          <a class="btn btn-primary jq-phone" href="javascript:;">改绑手机</a>
-                          <a class="btn btn-primary jq-pswd" href="javascript:;">重置密码</a>
-                        </td>
                       </tr>
                       <tr>
-                        <td>
-                          <div class="checkbox c-checkbox">
-                            <label>
-                              <input type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
-                        </td>
                         <td>18000000000</td>
                         <td>名字名字</td>
                         <td>昵称昵称</td>
@@ -516,39 +473,20 @@
                         <td class="text-danger">2015-01-21</td>
                         <td>500</td>
                         <td>七年级</td>
-                        <td>
-                          <a class="btn btn-primary jq-edit" href="javascript:;">修改资料</a>
-                          <a class="btn btn-primary jq-phone" href="javascript:;">改绑手机</a>
-                          <a class="btn btn-primary jq-pswd" href="javascript:;">重置密码</a>
-                        </td>
                       </tr>
                       <tr>
-                        <td>
-                          <div class="checkbox c-checkbox">
-                            <label>
-                              <input type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
-                        </td>
                         <td>18000000000</td>
                         <td>名字名字</td>
                         <td>昵称昵称</td>
-                        <td>小学</td>
+                        <td>小学、初中、高中</td>
                         <td>5天</td>
                         <td>2015-01-21</td>
                         <td>2015-01-21</td>
                         <td>500</td>
                         <td>七年级</td>
-                        <td>
-                          <a class="btn btn-primary jq-edit" href="javascript:;">修改资料</a>
-                          <a class="btn btn-primary jq-phone" href="javascript:;">改绑手机</a>
-                          <a class="btn btn-primary jq-pswd" href="javascript:;">重置密码</a>
-                        </td>
                       </tr>
                     </tbody>
                   </table>
-                  <a class="btn btn-primary jq-changeclass" href="javascript:;">调换班级</a>
                 </div>
 
                 <!-- build:pages -->
@@ -646,6 +584,11 @@
 
 
 
+
+
+
+
+
   </div>
 
   <!-- build:js -->
@@ -681,10 +624,21 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
   <script type="text/javascript" src="../js/vendor/parsley/parsley.min.js"></script>
   <script type="text/javascript" src="../js/vendor/parsley/zh_cn.js"></script>
-  <script src="../js/studentmanagement.js"></script>
-
+  <script src="../js/provincesData.js"></script>
+  <script src="../js/jquery.provincesCity.js"></script>
+  <script src="../js/studentmanagement_admin.js"></script>
 
 </body>
 
