--- a/src/html/coursemanagement_task.html
+++ b/src/html/coursemanagement_task.html
@@ -38,6 +38,8 @@
 
 
 
+
+
   <link rel="stylesheet" href="../css/wj_teacher.css">
 
 
@@ -84,6 +86,8 @@
       </nav>
     </header>
     <!-- endbuild -->
+
+
 
 
 
@@ -407,11 +411,13 @@
 
 
 
+
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          完成课程的学生列表
+          学习任务
           <div class='mt10 xc-clearfix'>
               <a href="javascript:history.go(-1)" class="btn btn-primary pull-left">返回</a>
           </div>
@@ -674,6 +680,8 @@
 
 
 
+
+
                   </div>
                 </div>
             </div>
@@ -688,6 +696,8 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
+
 
 
 
@@ -731,6 +741,8 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
+
 
 
 
